set(EOSFILE "${CMAKE_CURRENT_BINARY_DIR}/eos.dat")

add_custom_command(OUTPUT ${EOSFILE}
  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/generate-eos-table.py > ${EOSFILE}
  VERBATIM WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
add_custom_target(eos ALL DEPENDS ${EOSFILE})

install(FILES ${EOSFILE} DESTINATION ${PROJECT_NAME})
