set(EOSGEN "${CMAKE_CURRENT_SOURCE_DIR}/generate-eos-table.py")
set(EOSFILE "${CMAKE_CURRENT_BINARY_DIR}/eos.dat")

add_custom_command(OUTPUT ${EOSFILE}
  COMMAND ${EOSGEN} > ${EOSFILE}
  VERBATIM WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
  DEPENDS ${EOSGEN}
  )
add_custom_target(eos ALL DEPENDS ${EOSFILE})

install(FILES ${EOSFILE} DESTINATION share/${PROJECT_NAME})
